--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.2
   curved_navigation_bar: ^1.0.1
   flutter_spinkit: ^5.0.0
   carousel_slider: ^4.0.0
