CustomerList Page Created

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: garage_app
+name: mechanic_mart
 description: Oil products market chaining and distribution monitoring, customer tracking and e-commerce application.
 
 # The following line prevents the package from being accidentally published to
